--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,31 @@ nav a {color: white;
     padding: 20px;
 }
 
+main {
+    max-width: 840px;
+}
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 /0.2); /* 1️⃣ */
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+main img {
+    width: 150;
+    height: auto;
+    
+}
+
 h1 {color: darkblue;
 }
 
@@ -17,7 +42,12 @@ img {width: 150px;
     box-shadow: 0 0 30px gray;
 }
 
-p {padding: 10px;
+p {padding: 0;
 
 }
 
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
+}
