--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@ aside img {
 }
 
 main img {
-    width: 150;
+    width: 150px;
     height: auto;
     
 }
@@ -35,7 +35,7 @@ main img {
 h1 {color: darkblue;
 }
 
-img {width: 150px;
+img {width: 200px;
     height: auto;
     border: 1px black;
     padding: 2px;
