--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,9 +34,10 @@ main img {
 h1 {color: darkblue;
 }
 
-img {width: 200px;
+img {
+    width: 150px;
     height: auto;
-    border: 1px black;
+    border: 1px  black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
