--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    font-family: Roboto, Arial, sans-serif;
+}
 :root {
     --nav-header-color: rgb(2, 2, 41);
     --nav-a-aside-background-color: rgb(148, 87, 17);
     --img-border-aside-border-color: rgb(17,113,143);
-    
-    
-
 }
 nav {background-color: var(--nav-header-color); 
     padding: 10px;
@@ -27,6 +34,7 @@ aside {
     background-color: var(--nav-a-aside-background-color);
     color: #333;
     text-align: center;
+    position: relative;
 }
 
 img {
@@ -44,10 +52,26 @@ aside img {
 
 main img {
     width: 150px;
-    height: auto;    
+    height: auto; 
+    border: 1px solid steelblue; 
+    padding: 2px;
+    box-shadow: 30px gray;
+    float: right;  
+    margin: 0 0 1rem 1rem;
+}
+
+p {
+    margin: 1rem;
+
 }
 
 h1 {color: var(--nav-header-color);
+}
+
+aside h2 {
+  position: absolute;
+  top: 95px;
+  left: 120px;
 }
 
 
@@ -58,4 +82,17 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+  margin: 1rem;
+  border: 1px solid rgb(0 0 0 / 10%);
+  padding: 1rem;
+  background-color: #ddd;
+  color: #000;
+}
+
+.indent {
+    padding-left: 2rem;
 }
