--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -72,6 +72,7 @@ nav a:hover {
 article {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   margin: 2rem 0;
   background: #f1f1f1;
   padding: 1rem;
@@ -83,6 +84,8 @@ article img {
   margin-left: 1rem;
   border-radius: 8px;
 }
+
+
 
 h1, h2 {
   font-family: var(--heading-font);
@@ -107,3 +110,9 @@ footer p {
   height: 32px;
   margin-left: 0.5rem;
 }
+
+.socialmedia a {
+  text-decoration: none;
+  display: inline-block;
+}
+
