--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -48,7 +48,6 @@ nav a:hover {
 
 .hero {
   position: relative;
-  text-align: center;
 }
 
 .hero img {
@@ -59,15 +58,16 @@ nav a:hover {
 
 .hero h1 {
   position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
   background-color: rgba(0, 119, 182, 0.7);
   color: white;
-  padding: 1rem 2rem;
-  border-radius: 8px;
+  padding: 1rem;
   font-family: var(--heading-font);
 }
+
 
 article {
   display: flex;
