--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -69,7 +69,7 @@ nav a:hover {
 }
 
 
-article {
+.hero article {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -79,11 +79,11 @@ article {
   border-radius: 8px;
 }
 
-article img {
+.hero article img {
   width: 200px;
-  margin-left: 1rem;
-  border-radius: 8px;
+  margin-left: 1rem; 
 }
+
 
 
 h1, h2 {
