--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,28 +13,34 @@ body {
     --nav-a-aside-background-color: rgb(148, 87, 17);
     --img-border-aside-border-color: rgb(17,113,143);
 }
-nav {background-color: var(--nav-header-color); 
-    padding: 10px;
+nav {
+      background-color: steelblue;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
 }
 
-nav a {color: var(--nav-a-aside-background-color);
-    display: block;
-    padding: 20px;
+nav a {
+      display: block;
+      padding: 0.5rem;
+      text-decoration: none;
+      font-size: 1.2rem;
+      font-weight: 700;
+      color: #fff;
 }
 
 main {
-    max-width: 840px;
-}
+      display: grid;
+      align-items: center;
+    }
 
 aside {
-    width: 20rem;
-    margin: 1rem;
-    border: var(--img-border-aside-border-color);
-    padding: 1rem;
-    background-color: var(--nav-a-aside-background-color);
-    color: #333;
-    text-align: center;
-    position: relative;
+   
+      width: 20rem;
+      position: relative;
+      grid-column: 1;
+
 }
 
 img {
@@ -66,6 +72,8 @@ p {
 }
 
 h1 {color: var(--nav-header-color);
+    border-bottom: #333;
+    padding: 1rem;
 }
 
 aside h2 {
@@ -78,10 +86,9 @@ aside h2 {
 p {padding: 0;
 }
 
-footer {
-    margin-top: 15px;
-    border-top: 1px solid #000;
-    text-align: center;
+.grid, header, footer {
+    max-width: 840px;
+    margin: 0 auto;
 }
 
 /* Class Selectors */
@@ -96,3 +103,8 @@ footer {
 .indent {
     padding-left: 2rem;
 }
+
+.grid {
+      display: grid;
+      align-items: left;
+    }
