--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -10,6 +10,7 @@ body {
     font-size: 1.2em;
     color: #333;
     background: #fff;
+    position: static;
 }
 
 header {
@@ -17,19 +18,23 @@ header {
     width: 500px;
     color: rgb(25, 25, 104);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 30px;
 
 }
 
 button {
     color: #fff;
     background-color: rgb(29, 29, 123);
-    display: block;
-    width: 150;
     padding: .65rem;
     border: none;
     border-radius: .5rem;
     font-size: 1.5rem;
-    margin: 1rem;
+    margin: 1rem 1rem;
+    display: grid;
+}
+
+button:hover {
+  background-color: darkcyan;
 }
 
 h1 {
@@ -58,10 +63,11 @@ fieldset {
 
 }
 
-fieldset legend {
+legend {
   padding: 0.5rem;
   color: navy;
   font-size: 1.3em;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 label, input, button, select, textarea {
@@ -69,18 +75,18 @@ label, input, button, select, textarea {
 }
 
 label {
-    text-align: right;
+    text-align: left;
     padding-right: 1rem;
 }
 
 input, select, textarea {
-    padding: 1rem;
-    font-size: larger;
+    padding: .5rem;
+    font-size: 1.1rem;
 }
 
 input[type="checkbox"] {
-    width: 200px;
-    height: 150px;
+    width: 20px;
+    height: 20px;
     vertical-align: bottom;
 }
 
@@ -100,12 +106,12 @@ footer {
 
 .column1 {
     grid-template-columns: 3fr 1fr;
-    margin: 0.4rem 0;
+    margin: 0.2rem 0;
 }
 
 .column2 {
     grid-template-columns: 1fr 2fr;
-    margin: 0.5rem 0;
-    
+    margin: 0.2rem 0;
+
 }
 
