html and css updated

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -70,6 +70,12 @@ main {
   max-width: none;
 }
 
+.company-info {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
 /* ===============================
    CONTACT SECTION
 ================================== */
